force-app/main/default/objects/Activity_log_has_activity__c/Activity_log_has_activity__c.object-meta.xml
<CustomObject>
    <label>Activity log has activity</label>
    <nameField>
        <label>Activity log has activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity logs has activity</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>