force-app/main/default/objects/Activity_log_has_activity__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <referenceTo>Activity__c</referenceTo>
    <relationshipLabel>Activity logs has activity</relationshipLabel>
    <relationshipName>Activity_logs_has_activity</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>