force-app/main/default/objects/Activity_log_has_activity__c/fields/Activity_Log__c.field-meta.xml
<CustomField>
    <fullName>Activity_Log__c</fullName>
    <label>Activity Log</label>
    <referenceTo>Activity_Log__c</referenceTo>
    <relationshipLabel>Activity logs has activity</relationshipLabel>
    <relationshipName>Activity_logs_has_activity</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>