force-app/main/default/objects/Activity_log_has_activity__c/fields/Burned_calories__c.field-meta.xml
<CustomField>
    <fullName>Burned_calories__c</fullName>
    <label>Burned calories</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>